--- a/app/(navigation)/(code)/components/Frame.module.css
+++ b/app/(navigation)/(code)/components/Frame.module.css
@@ -754,7 +754,7 @@
   display: grid;
   height: 40px;
   align-items: center;
-  color: #55d799;
+  color: #faa619;
   font-size: 12px;
   line-height: 40px;
   vertical-align: top;
@@ -807,10 +807,16 @@
 .mintlifyPatternWrapper {
   position: absolute;
   top: 0;
-  right: -25px;
-  width: 700px;
-  height: 600px;
-  background: radial-gradient(49.63% 57.02% at 58.99% -7.2%, rgba(13, 147, 115, 0.1) 39.4%, rgba(0, 0, 0, 0) 100%);
+  right: -25px; /* Adjust this as needed */
+  overflow: hidden; /* Prevent overflow if needed */
+  width: 700px; /* Set the desired width */
+  height: 600px; /* Set the desired height */
+}
+
+.mintlifyPatternWrapper img {
+  width: 100%; /* Make the image fill the width of the wrapper */
+  height: 100%; /* Make the image fill the height of the wrapper */
+  object-fit: cover; /* This will ensure the image covers the wrapper without distortion */
 }
 
 .mintlifyPattern {
